# bellman-zorch

./: .gitignore  Cargo.toml  README.md  bench.sh
crates/zkx-pjrt/: Cargo.toml  build.rs
crates/zkx-pjrt/src/: lib.rs
examples/: bench.rs
export/: export_bellman_core.py
src/: gpu.rs  lib.rs  prove.rs  setup.rs
tests/: cpu_mimc.rs  gpu_mimc.rs
tests/common/: mod.rs
