[package]
name = "bellman-zorch"
version = "0.1.0"
edition = "2021"
description = "GPU Groth16 prover for bellman (BN256/alt_bn128) — a drop-in for bellman's groth16::create_proof that routes the multiexp (MSM) to the zkx GPU plugin via PJRT."

# Own workspace root; the vendored zkx-pjrt FFI shim is a member crate.
[workspace]
members = ["crates/zkx-pjrt"]

[dependencies]
bellman = { path = "../bellman" }
groth16 = { path = "../bellman/groth16" }
ff = "0.13"
group = "0.13"
pairing = "0.23"
rand_core = "0.6"
zkx-pjrt = { path = "crates/zkx-pjrt" }
# BN256 = alt_bn128 = BN254 (our zkx GPU kernels' curve), implementing the
# bellman trait stack (ff 0.13 / group 0.13 / pairing 0.23).
halo2curves = "0.6"

[dev-dependencies]
rand = "0.8"
